@@ -1,6 +1,10 @@
 Release history for CPAN-Changes-Dependencies-Details
 
 {{$NEXT}}
+ [Bugfix]
+ - Be slightly less dumb how generated releases get added to the log.
+ - This is a forwards compatibility fix also ;)
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001003, see misc/*.deps* for details
  - develop: (suggests: ↑1)
